<resources>
    <string name="app_name">Fulfill</string>
    <string name="title_activity_list_note">ListNoteActivity</string>
    <string name="due_date">Due Date</string>
    <string name="confirm">Confirm</string>
    <string name="pic">picture</string>
    <string name="experience">Experience</string>
    <string name="health">Health</string>
    <string name="satisfaction">Satisfaction</string>
    <string name="st">st</string>
    <string name="happiness">Happiness</string>
    <string name="category">Category</string>
    <string name="myapp">MyApp</string>


    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="category_array">
        <item>Study</item>
        <item>Exersize</item>
        <item>work</item>
        <item>Shopping</item>
        <item>Home</item>
        <item> Others</item>
    </string-array>

    <string-array name="done_array">
        <item>"0%"</item>
        <item>"25%"</item>
        <item>"50%"</item>
        <item>"100%"</item>
    </string-array>
    <string name="title_activity_h">HActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
