<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fbagheri.fulfill.MainFragment"
    android:orientation="vertical"
    >


        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorGrayDark">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/myapp"
                        android:id="@+id/appName"
                        android:gravity="center"
                        android:layout_gravity="center"

                        />

                </LinearLayout>



            </android.support.v7.widget.Toolbar>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.3"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/main_img"
                    android:background="@drawable/splash"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/pic"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/r7"
                    android:gravity="left">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:id="@+id/txt_name"
                        android:layout_marginBottom="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:id="@+id/txt_age"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:layout_marginBottom="5dp">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="7dp"
                    android:id="@+id/r1">

                    <ProgressBar
                        android:layout_width="fill_parent"
                        android:layout_height="15dp"
                        android:id="@+id/pb_hp"
                        android:indeterminate="false"
                        android:background="@color/colorGray"
                        style="@android:style/Widget.ProgressBar.Horizontal"


                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/happiness"
                        android:id="@+id/textView4"
                        android:layout_alignEnd="@+id/pb_hp"
                        android:layout_below="@+id/pb_hp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:id="@+id/hp_txt"
                        android:layout_below="@+id/pb_hp"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="7dp"
                    android:id="@+id/r2">

                    <ProgressBar
                        android:layout_width="fill_parent"
                        android:layout_height="15dp"
                        android:id="@+id/pb_st"
                        android:indeterminate="false"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/satisfaction"
                        android:id="@+id/textView6"
                        android:layout_alignEnd="@+id/pb_st"
                        android:layout_below="@+id/pb_st" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/st_txt"
                        android:layout_below="@+id/pb_st"
                        android:layout_alignParentStart="true"
                        android:text="@string/st" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/r3"
                    android:layout_marginBottom="7dp">


                    <ProgressBar
                        android:layout_width="fill_parent"
                        android:layout_height="15dp"
                        android:id="@+id/pb_hlth"
                        android:indeterminate="false"
                        style="@android:style/Widget.ProgressBar.Horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health"
                        android:id="@+id/textView8"
                        android:layout_alignEnd="@+id/pb_hlth"
                        android:layout_below="@+id/pb_hlth" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:id="@+id/hlth_txt"
                        android:layout_below="@+id/pb_hlth"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/r4"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="7dp">


                    <ProgressBar
                        android:layout_width="fill_parent"
                        android:layout_height="15dp"
                        android:id="@+id/pb_exp"
                        android:indeterminate="false"
                        style="@android:style/Widget.ProgressBar.Horizontal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/experience"
                        android:id="@+id/textView10"
                        android:layout_alignEnd="@+id/pb_exp"
                        android:layout_below="@+id/pb_exp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:id="@+id/exp_txt"
                        android:layout_below="@+id/pb_exp"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/r5"
                    android:gravity="right"
                    android:baselineAligned="false">


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginLeft="40dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:id="@+id/coin_img"
                            android:background="@drawable/coin"
                            android:layout_marginRight="3dp"
                            android:layout_marginLeft="10dp"
                            />

                        <TextView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:text="Medium Text"
                            android:id="@+id/coin_txt"
                            android:layout_marginRight="10dp"
                            android:gravity="center_vertical"/>


                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:id="@+id/heart_img"
                            android:background="@drawable/heart"
                            android:layout_marginRight="3dp"
                            android:layout_marginLeft="10dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Medium Text"
                            android:id="@+id/heart_txt"
                            android:layout_marginRight="10dp"
                            android:gravity="center_vertical"/>


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/blue">

            <ListView
                android:layout_width="match_parent"
                android:id="@+id/lst_notes"
                android:layout_height="wrap_content"
                android:layout_marginTop="?attr/actionBarSize"/>

        </ScrollView>





    </LinearLayout>

